Code updates  - HSPA and EUA  -- Implemented speciality search  -- Fixed date issue temporarily  -- fixed cancel api issue from backend. Cancel is shifted to bookingservice from euaService
EUA and HSPA app
 - Group consultation video rendering issue fixed
 - Video rendering issue for EUA and HSPA
 - Shifted consumerURL to HSPA app side